--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -9,10 +11,16 @@
 }
 
 :root {
+  --primary-white: #ffffff;
+  --indigo: #5041bc;
+  --dark-blue: #04103b;
+  --green: #43be83;
+  --orange: #ff8057;
+
   line-height: 1.5;
   font-weight: 400;
 
-  background-color: #f5f5f5;
+  background-color: white;
   color: #1a1a1a;
 }
 
@@ -27,4 +35,99 @@ body {
   flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
+}
+
+.truncate- {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+
+  &2 {
+    @extend .truncate-;
+    -webkit-line-clamp: 2;
+  }
+
+  &3 {
+    @extend .truncate-;
+    -webkit-line-clamp: 3;
+  }
+
+  &4 {
+    @extend .truncate-;
+    -webkit-line-clamp: 4;
+  }
+
+  &5 {
+    @extend .truncate-;
+    -webkit-line-clamp: 5;
+  }
+
+  &6 {
+    @extend .truncate-;
+    -webkit-line-clamp: 6;
+  }
+}
+
+.ant-btn-primary {
+  background-color: var(--indigo) !important;
+
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
+.ant-layout-sider-children {
+  width: 100% !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sider-nav {
+  background-color: var(--indigo);
+
+  .ant-menu-item {
+    color: var(--primary-white) !important;
+    font-size: 16px;
+    margin-bottom: 12px;
+
+    &:last-child {
+      margin-bottom: 4px;
+    }
+
+    &.ant-menu-item-active {
+      background-color: #ffffff29 !important;
+    }
+
+    &.ant-menu-item-selected {
+      background-color: white !important;
+      color: var(--indigo) !important;
+      font-weight: 700;
+    }
+
+    .ant-menu-title-content {
+      padding-left: 32px;
+    }
+  }
+}
+
+.ant-table-thead {
+  .ant-table-cell {
+    background-color: var(--indigo) !important;
+    color: white !important;
+  }
+}
+
+.nav-link {
+  &:hover {
+    background-color: #ffffff2f;
+    color: white;
+  }
+
+  &.active {
+    background-color: white;
+    color: var(--indigo);
+    font-weight: bold;
+  }
 }
