--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,8 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import '../styles/components/nav-link';
-@import '../styles/layouts/header';
+@import '../styles/header';
 
 * {
   margin: 0;
